[gd_scene load_steps=4 format=3 uid="uid://bbttbe6gdeovv"]

[ext_resource type="Script" uid="uid://cncdvy5f6dld4" path="res://scenes/spike_cannon/spike_cannon.gd" id="1_785w2"]
[ext_resource type="PackedScene" uid="uid://c3d6oqda7xsyi" path="res://scenes/spike_cannon/spike_cannon_bullet/spike_cannon_bullet.tscn" id="2_n5em8"]
[ext_resource type="Texture2D" uid="uid://b8vaonhcgqc8f" path="res://assets/tilemaps/monochrome_tilemap_transparent_packed.png" id="3_8dq1k"]

[node name="SpikeCannon" type="Node2D"]
script = ExtResource("1_785w2")
bullet_scene = ExtResource("2_n5em8")

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="BulletOrigin" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 0)
rotation = 1.5708
texture = ExtResource("3_8dq1k")
region_enabled = true
region_rect = Rect2(48, 172, 16, 4)
